#251 fixed alignment of 'feedback by' on feedback form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,7 +10,6 @@
 
 .some-class { float:left; clear:none; }
 fieldset { overflow:hidden }
-label { float:left; clear:none; display:block; padding: 2px 1em 0 0; }
 input[type=radio], input.radio { float:left; clear:none; margin: 2px 0 0 2px; }
 
 /* universal */
@@ -21,6 +20,13 @@ html {
 
 body {
   padding-top: 100px;
+}
+
+label { 
+  float:left; 
+  clear:none; 
+  display:block; 
+  padding: 0 1em 0 0; 
 }
 
 textarea {
